fix: Adjust navigation icons to -12px when collapsed
- Changed margin-top from -10px to -12px
- Navigation icons now move up 12px total when sidebar is collapsed

--- a/src/components/layout/MainSidebar/MainSidebar.scss
+++ b/src/components/layout/MainSidebar/MainSidebar.scss
@@ -134,7 +134,7 @@
 
   // Ajustar posición de navegación cuando está colapsada
   &--collapsed &__nav {
-    margin-top: -10px;
+    margin-top: -12px;
   }
 
   &__secondary {
